// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`new sync stream features > IN operator with static left clause 1`] = `
{
  "buckets": [
    {
      "hash": 504882872,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 252303259,
      "outputTableName": "issues",
      "partitionBy": [],
      "table": {
        "connection": null,
        "schema": null,
        "table": "issues",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [
    {
      "filters": [
        {
          "left": {
            "left": {
              "type": "lit_string",
              "value": "static",
            },
            "operator": "=",
            "right": {
              "source": {
                "column": "id",
              },
              "type": "data",
            },
            "type": "binary",
          },
          "operator": "and",
          "right": {
            "source": {
              "column": "is_admin",
            },
            "type": "data",
          },
          "type": "binary",
        },
      ],
      "hash": 61622074,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "0",
      },
      "output": [],
      "partitionBy": [],
      "table": {
        "connection": null,
        "schema": null,
        "table": "users",
      },
      "tableValuedFunctions": [],
    },
  ],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "instantiation": [],
                "lookup": 0,
                "type": "parameter",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > IN operator with two static clauses 1`] = `
{
  "buckets": [
    {
      "hash": 504882872,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 252303259,
      "outputTableName": "issues",
      "partitionBy": [],
      "table": {
        "connection": null,
        "schema": null,
        "table": "issues",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "filters": [
                  {
                    "left": {
                      "type": "lit_string",
                      "value": "issues",
                    },
                    "operator": "=",
                    "right": {
                      "source": {
                        "column": "value",
                      },
                      "type": "data",
                    },
                    "type": "binary",
                  },
                ],
                "functionInputs": [
                  {
                    "function": "->>",
                    "parameters": [
                      {
                        "source": {
                          "request": "auth",
                        },
                        "type": "data",
                      },
                      {
                        "type": "lit_string",
                        "value": "synced_tables",
                      },
                    ],
                    "type": "function",
                  },
                ],
                "functionName": "json_each",
                "outputs": [],
                "type": "table_valued",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > checking for existence in two CTEs 1`] = `
{
  "buckets": [
    {
      "hash": 215122439,
      "sources": [
        0,
      ],
      "uniqueName": "rbac_stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 80560391,
      "outputTableName": "Scene",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "project",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "Scene",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [
    {
      "filters": [
        {
          "left": {
            "type": "lit_string",
            "value": "a",
          },
          "operator": "=",
          "right": {
            "source": {
              "column": "perm",
            },
            "type": "data",
          },
          "type": "binary",
        },
      ],
      "hash": 331282873,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "0",
      },
      "output": [],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "user",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "global_permissions",
      },
      "tableValuedFunctions": [],
    },
    {
      "filters": [
        {
          "left": {
            "type": "lit_string",
            "value": "b",
          },
          "operator": "=",
          "right": {
            "source": {
              "column": "perm",
            },
            "type": "data",
          },
          "type": "binary",
        },
      ],
      "hash": 14791390,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "1",
      },
      "output": [],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "user",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "project_permissions",
      },
      "tableValuedFunctions": [],
    },
  ],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "instantiation": [
                  {
                    "expr": {
                      "function": "->>",
                      "parameters": [
                        {
                          "source": {
                            "request": "auth",
                          },
                          "type": "data",
                        },
                        {
                          "type": "lit_string",
                          "value": "$.sub",
                        },
                      ],
                      "type": "function",
                    },
                    "type": "request",
                  },
                ],
                "lookup": 0,
                "type": "parameter",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "expr": {
                "function": "->>",
                "parameters": [
                  {
                    "source": {
                      "request": "subscription",
                    },
                    "type": "data",
                  },
                  {
                    "type": "lit_string",
                    "value": "project",
                  },
                ],
                "type": "function",
              },
              "type": "request",
            },
          ],
        },
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "instantiation": [
                  {
                    "expr": {
                      "function": "->>",
                      "parameters": [
                        {
                          "source": {
                            "request": "auth",
                          },
                          "type": "data",
                        },
                        {
                          "type": "lit_string",
                          "value": "$.sub",
                        },
                      ],
                      "type": "function",
                    },
                    "type": "request",
                  },
                ],
                "lookup": 1,
                "type": "parameter",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "expr": {
                "function": "->>",
                "parameters": [
                  {
                    "source": {
                      "request": "subscription",
                    },
                    "type": "data",
                  },
                  {
                    "type": "lit_string",
                    "value": "project",
                  },
                ],
                "type": "function",
              },
              "type": "request",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": false,
        "name": "rbac_stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > circular references > at first level 1`] = `
{
  "buckets": [
    {
      "hash": 369605791,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 258551590,
      "outputTableName": "a",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "c2",
            },
            "type": "data",
          },
        },
        {
          "expr": {
            "source": {
              "column": "c1",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "a",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 508315757,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "0",
      },
      "output": [
        {
          "source": {
            "column": "c1",
          },
          "type": "data",
        },
        {
          "source": {
            "column": "c2",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "u",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "b",
      },
      "tableValuedFunctions": [],
    },
  ],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "instantiation": [
                  {
                    "expr": {
                      "function": "->>",
                      "parameters": [
                        {
                          "source": {
                            "request": "auth",
                          },
                          "type": "data",
                        },
                        {
                          "type": "lit_string",
                          "value": "$.sub",
                        },
                      ],
                      "type": "function",
                    },
                    "type": "request",
                  },
                ],
                "lookup": 0,
                "type": "parameter",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 0,
              },
              "resultIndex": 1,
              "type": "lookup",
            },
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 0,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > circular references > nested 1`] = `
{
  "buckets": [
    {
      "hash": 533534265,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 501930921,
      "outputTableName": "a",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "c4",
            },
            "type": "data",
          },
        },
        {
          "expr": {
            "source": {
              "column": "c1",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "a",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 105317550,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "0",
      },
      "output": [
        {
          "source": {
            "column": "c3",
          },
          "type": "data",
        },
        {
          "source": {
            "column": "c4",
          },
          "type": "data",
        },
      ],
      "partitionBy": [],
      "table": {
        "connection": null,
        "schema": null,
        "table": "d",
      },
      "tableValuedFunctions": [],
    },
    {
      "filters": [],
      "hash": 251179367,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "1",
      },
      "output": [
        {
          "source": {
            "column": "c2",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "c3",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "c",
      },
      "tableValuedFunctions": [],
    },
    {
      "filters": [],
      "hash": 350988327,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "2",
      },
      "output": [
        {
          "source": {
            "column": "c1",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "c2",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "b",
      },
      "tableValuedFunctions": [],
    },
  ],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "instantiation": [],
                "lookup": 0,
                "type": "parameter",
              },
            ],
            [
              {
                "instantiation": [
                  {
                    "lookup": {
                      "idInStage": 0,
                      "stageId": 0,
                    },
                    "resultIndex": 0,
                    "type": "lookup",
                  },
                ],
                "lookup": 1,
                "type": "parameter",
              },
            ],
            [
              {
                "instantiation": [
                  {
                    "lookup": {
                      "idInStage": 0,
                      "stageId": 1,
                    },
                    "resultIndex": 0,
                    "type": "lookup",
                  },
                ],
                "lookup": 2,
                "type": "parameter",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 0,
              },
              "resultIndex": 1,
              "type": "lookup",
            },
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 2,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > circular references > table-valued 1`] = `
{
  "buckets": [
    {
      "hash": 108933878,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 309686539,
      "outputTableName": "a",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "function": 0,
              "outputName": "value",
            },
            "type": "data",
          },
        },
        {
          "expr": {
            "source": {
              "column": "k",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "a",
      },
      "tableValuedFunctions": [
        {
          "functionInputs": [
            {
              "source": {
                "column": "tags",
              },
              "type": "data",
            },
          ],
          "functionName": "json_each",
        },
      ],
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 311271245,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "0",
      },
      "output": [
        {
          "source": {
            "column": "k",
          },
          "type": "data",
        },
        {
          "source": {
            "column": "v",
          },
          "type": "data",
        },
      ],
      "partitionBy": [],
      "table": {
        "connection": null,
        "schema": null,
        "table": "b",
      },
      "tableValuedFunctions": [],
    },
  ],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "instantiation": [],
                "lookup": 0,
                "type": "parameter",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 0,
              },
              "resultIndex": 1,
              "type": "lookup",
            },
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 0,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > in array 1`] = `
{
  "buckets": [
    {
      "hash": 307632867,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "in": [
            {
              "type": "lit_string",
              "value": "public",
            },
            {
              "type": "lit_string",
              "value": "archived",
            },
          ],
          "target": {
            "source": {
              "column": "state",
            },
            "type": "data",
          },
          "type": "scalar_in",
        },
      ],
      "hash": 366938535,
      "outputTableName": "notes",
      "partitionBy": [],
      "table": {
        "connection": null,
        "schema": null,
        "table": "notes",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [],
          "requestFilters": [],
          "sourceInstantiation": [],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > in array and additional filter in subquery 1`] = `
{
  "buckets": [
    {
      "hash": 371862092,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 25953646,
      "outputTableName": "notes",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "owner_id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "notes",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [
    {
      "filters": [
        {
          "left": {
            "source": {
              "column": "state",
            },
            "type": "data",
          },
          "operator": "=",
          "right": {
            "source": {
              "function": 0,
              "outputName": "value",
            },
            "type": "data",
          },
          "type": "binary",
        },
      ],
      "hash": 450331817,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "0",
      },
      "output": [
        {
          "source": {
            "column": "id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "org",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "users",
      },
      "tableValuedFunctions": [
        {
          "functionInputs": [
            {
              "type": "lit_string",
              "value": "["public", "archived"]",
            },
          ],
          "functionName": "json_each",
        },
      ],
    },
  ],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "instantiation": [
                  {
                    "expr": {
                      "function": "->>",
                      "parameters": [
                        {
                          "source": {
                            "request": "auth",
                          },
                          "type": "data",
                        },
                        {
                          "type": "lit_string",
                          "value": "org",
                        },
                      ],
                      "type": "function",
                    },
                    "type": "request",
                  },
                ],
                "lookup": 0,
                "type": "parameter",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 0,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > in json array 1`] = `
{
  "buckets": [
    {
      "hash": 267897099,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "left": {
            "source": {
              "column": "state",
            },
            "type": "data",
          },
          "operator": "=",
          "right": {
            "source": {
              "function": 0,
              "outputName": "value",
            },
            "type": "data",
          },
          "type": "binary",
        },
      ],
      "hash": 484392710,
      "outputTableName": "notes",
      "partitionBy": [],
      "table": {
        "connection": null,
        "schema": null,
        "table": "notes",
      },
      "tableValuedFunctions": [
        {
          "functionInputs": [
            {
              "type": "lit_string",
              "value": "["public", "archived"]",
            },
          ],
          "functionName": "json_each",
        },
      ],
    },
  ],
  "parameterIndexes": [],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [],
          "requestFilters": [],
          "sourceInstantiation": [],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > joins feedback > response 1 1`] = `
{
  "buckets": [
    {
      "hash": 221193482,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 97057433,
      "outputTableName": "u",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "users",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 7102946,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "0",
      },
      "output": [
        {
          "source": {
            "column": "group_id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "user_id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "group_memberships",
      },
      "tableValuedFunctions": [],
    },
    {
      "filters": [],
      "hash": 96230619,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "1",
      },
      "output": [
        {
          "source": {
            "column": "user_id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "group_id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "group_memberships",
      },
      "tableValuedFunctions": [],
    },
  ],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "instantiation": [
                  {
                    "expr": {
                      "function": "->>",
                      "parameters": [
                        {
                          "source": {
                            "request": "auth",
                          },
                          "type": "data",
                        },
                        {
                          "type": "lit_string",
                          "value": "$.sub",
                        },
                      ],
                      "type": "function",
                    },
                    "type": "request",
                  },
                ],
                "lookup": 0,
                "type": "parameter",
              },
            ],
            [
              {
                "instantiation": [
                  {
                    "lookup": {
                      "idInStage": 0,
                      "stageId": 0,
                    },
                    "resultIndex": 0,
                    "type": "lookup",
                  },
                ],
                "lookup": 1,
                "type": "parameter",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 1,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > joins feedback > response 4 1`] = `
{
  "buckets": [
    {
      "hash": 499713123,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 313970881,
      "outputTableName": "m",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "organization_id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "message",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [
    {
      "filters": [
        {
          "left": {
            "source": {
              "column": "role_id",
            },
            "type": "data",
          },
          "operator": "=",
          "right": {
            "type": "lit_string",
            "value": "ORGANIZATION_LEADER",
          },
          "type": "binary",
        },
      ],
      "hash": 478900091,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "0",
      },
      "output": [
        {
          "source": {
            "column": "organization_id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "account_id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "roles",
      },
      "tableValuedFunctions": [],
    },
  ],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "instantiation": [
                  {
                    "expr": {
                      "function": "->>",
                      "parameters": [
                        {
                          "source": {
                            "request": "auth",
                          },
                          "type": "data",
                        },
                        {
                          "type": "lit_string",
                          "value": "$.sub",
                        },
                      ],
                      "type": "function",
                    },
                    "type": "request",
                  },
                ],
                "lookup": 0,
                "type": "parameter",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 0,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > joins feedback > response 5 1`] = `
{
  "buckets": [
    {
      "hash": 372337345,
      "sources": [
        0,
        1,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 62299225,
      "outputTableName": "users",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "family_id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "users",
      },
      "tableValuedFunctions": [],
    },
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 521704692,
      "outputTableName": "families",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "families",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 381188991,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "0",
      },
      "output": [
        {
          "source": {
            "column": "user_id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "auth_id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "user_auth_mappings",
      },
      "tableValuedFunctions": [],
    },
    {
      "filters": [],
      "hash": 440281250,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "1",
      },
      "output": [
        {
          "source": {
            "column": "family_id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "users",
      },
      "tableValuedFunctions": [],
    },
  ],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "instantiation": [
                  {
                    "expr": {
                      "function": "->>",
                      "parameters": [
                        {
                          "source": {
                            "request": "auth",
                          },
                          "type": "data",
                        },
                        {
                          "type": "lit_string",
                          "value": "$.sub",
                        },
                      ],
                      "type": "function",
                    },
                    "type": "request",
                  },
                ],
                "lookup": 0,
                "type": "parameter",
              },
            ],
            [
              {
                "instantiation": [
                  {
                    "lookup": {
                      "idInStage": 0,
                      "stageId": 0,
                    },
                    "resultIndex": 0,
                    "type": "lookup",
                  },
                ],
                "lookup": 1,
                "type": "parameter",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 1,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > joins feedback > response 8 1`] = `
{
  "buckets": [
    {
      "hash": 184379202,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 29364994,
      "outputTableName": "events",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "events",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 418216473,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "0",
      },
      "output": [
        {
          "source": {
            "column": "event_id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "user_id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "event_users",
      },
      "tableValuedFunctions": [],
    },
  ],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "instantiation": [
                  {
                    "expr": {
                      "function": "->>",
                      "parameters": [
                        {
                          "source": {
                            "request": "auth",
                          },
                          "type": "data",
                        },
                        {
                          "type": "lit_string",
                          "value": "$.sub",
                        },
                      ],
                      "type": "function",
                    },
                    "type": "request",
                  },
                ],
                "lookup": 0,
                "type": "parameter",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 0,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > joins feedback > response 9 1`] = `
{
  "buckets": [
    {
      "hash": 206255983,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 333904209,
      "outputTableName": "u",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "public",
        "table": "users",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 1436015,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "0",
      },
      "output": [
        {
          "source": {
            "column": "organization_id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "user_id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "public",
        "table": "user_organization_map",
      },
      "tableValuedFunctions": [],
    },
    {
      "filters": [],
      "hash": 469586132,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "1",
      },
      "output": [
        {
          "source": {
            "column": "user_id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "organization_id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "public",
        "table": "user_organization_map",
      },
      "tableValuedFunctions": [],
    },
  ],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "instantiation": [
                  {
                    "expr": {
                      "function": "->>",
                      "parameters": [
                        {
                          "source": {
                            "request": "auth",
                          },
                          "type": "data",
                        },
                        {
                          "type": "lit_string",
                          "value": "$.sub",
                        },
                      ],
                      "type": "function",
                    },
                    "type": "request",
                  },
                ],
                "lookup": 0,
                "type": "parameter",
              },
            ],
            [
              {
                "instantiation": [
                  {
                    "lookup": {
                      "idInStage": 0,
                      "stageId": 0,
                    },
                    "resultIndex": 0,
                    "type": "lookup",
                  },
                ],
                "lookup": 1,
                "type": "parameter",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 1,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > joins feedback > response 10 1`] = `
{
  "buckets": [
    {
      "hash": 417667471,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 329182865,
      "outputTableName": "a",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "public",
        "table": "addresses",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 1436015,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "0",
      },
      "output": [
        {
          "source": {
            "column": "organization_id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "user_id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "public",
        "table": "user_organization_map",
      },
      "tableValuedFunctions": [],
    },
    {
      "filters": [],
      "hash": 469586132,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "1",
      },
      "output": [
        {
          "source": {
            "column": "user_id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "organization_id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "public",
        "table": "user_organization_map",
      },
      "tableValuedFunctions": [],
    },
    {
      "filters": [],
      "hash": 434154687,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "2",
      },
      "output": [
        {
          "source": {
            "column": "address_id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "public",
        "table": "users",
      },
      "tableValuedFunctions": [],
    },
  ],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "instantiation": [
                  {
                    "expr": {
                      "function": "->>",
                      "parameters": [
                        {
                          "source": {
                            "request": "auth",
                          },
                          "type": "data",
                        },
                        {
                          "type": "lit_string",
                          "value": "app_metadata.user_id",
                        },
                      ],
                      "type": "function",
                    },
                    "type": "request",
                  },
                ],
                "lookup": 0,
                "type": "parameter",
              },
            ],
            [
              {
                "instantiation": [
                  {
                    "lookup": {
                      "idInStage": 0,
                      "stageId": 0,
                    },
                    "resultIndex": 0,
                    "type": "lookup",
                  },
                ],
                "lookup": 1,
                "type": "parameter",
              },
            ],
            [
              {
                "instantiation": [
                  {
                    "lookup": {
                      "idInStage": 0,
                      "stageId": 1,
                    },
                    "resultIndex": 0,
                    "type": "lookup",
                  },
                ],
                "lookup": 2,
                "type": "parameter",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 2,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > joins feedback > response 11 1`] = `
{
  "buckets": [
    {
      "hash": 15255881,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 334678181,
      "outputTableName": "t",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "ticket",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 277446621,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "0",
      },
      "output": [
        {
          "source": {
            "column": "ticket_id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "user_id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "ticket_detail_item",
      },
      "tableValuedFunctions": [],
    },
  ],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "instantiation": [
                  {
                    "expr": {
                      "function": "->>",
                      "parameters": [
                        {
                          "source": {
                            "request": "auth",
                          },
                          "type": "data",
                        },
                        {
                          "type": "lit_string",
                          "value": "$.sub",
                        },
                      ],
                      "type": "function",
                    },
                    "type": "request",
                  },
                ],
                "lookup": 0,
                "type": "parameter",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 0,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > joins feedback > response 12 1`] = `
{
  "buckets": [
    {
      "hash": 242995705,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 350236831,
      "outputTableName": "p",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "profile",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 225571037,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "0",
      },
      "output": [
        {
          "source": {
            "column": "id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "function": 0,
              "outputName": "value",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "project",
      },
      "tableValuedFunctions": [
        {
          "functionInputs": [
            {
              "source": {
                "column": "download_profiles",
              },
              "type": "data",
            },
          ],
          "functionName": "json_each",
        },
      ],
    },
    {
      "filters": [
        {
          "left": {
            "operand": {
              "left": {
                "source": {
                  "column": "membership",
                },
                "type": "data",
              },
              "operator": "is",
              "right": {
                "type": "lit_null",
              },
              "type": "binary",
            },
            "operator": "not",
            "type": "unary",
          },
          "operator": "and",
          "right": {
            "left": {
              "source": {
                "column": "active",
              },
              "type": "data",
            },
            "operator": "=",
            "right": {
              "base10": "1",
              "type": "lit_int",
            },
            "type": "binary",
          },
          "type": "binary",
        },
      ],
      "hash": 395043210,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "1",
      },
      "output": [
        {
          "source": {
            "column": "profile_id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "project_id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "profile_project_link",
      },
      "tableValuedFunctions": [],
    },
  ],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "instantiation": [
                  {
                    "expr": {
                      "function": "->>",
                      "parameters": [
                        {
                          "source": {
                            "request": "auth",
                          },
                          "type": "data",
                        },
                        {
                          "type": "lit_string",
                          "value": "$.sub",
                        },
                      ],
                      "type": "function",
                    },
                    "type": "request",
                  },
                ],
                "lookup": 0,
                "type": "parameter",
              },
            ],
            [
              {
                "instantiation": [
                  {
                    "lookup": {
                      "idInStage": 0,
                      "stageId": 0,
                    },
                    "resultIndex": 0,
                    "type": "lookup",
                  },
                ],
                "lookup": 1,
                "type": "parameter",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 1,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > joins feedback > response 13 1`] = `
{
  "buckets": [
    {
      "hash": 188573007,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 252506179,
      "outputTableName": "c",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "checkpoint",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 438214067,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "0",
      },
      "output": [
        {
          "source": {
            "column": "assignment_id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "user_id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "user_assignment_scope",
      },
      "tableValuedFunctions": [],
    },
    {
      "filters": [
        {
          "left": {
            "source": {
              "column": "active",
            },
            "type": "data",
          },
          "operator": "=",
          "right": {
            "base10": "1",
            "type": "lit_int",
          },
          "type": "binary",
        },
      ],
      "hash": 5166607,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "1",
      },
      "output": [
        {
          "source": {
            "column": "id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "assignment",
      },
      "tableValuedFunctions": [],
    },
    {
      "filters": [],
      "hash": 305606865,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "2",
      },
      "output": [
        {
          "source": {
            "column": "checkpoint_id",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "assignment_id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "assignment_checkpoint",
      },
      "tableValuedFunctions": [],
    },
  ],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "instantiation": [
                  {
                    "expr": {
                      "function": "->>",
                      "parameters": [
                        {
                          "source": {
                            "request": "auth",
                          },
                          "type": "data",
                        },
                        {
                          "type": "lit_string",
                          "value": "$.sub",
                        },
                      ],
                      "type": "function",
                    },
                    "type": "request",
                  },
                ],
                "lookup": 0,
                "type": "parameter",
              },
            ],
            [
              {
                "instantiation": [
                  {
                    "lookup": {
                      "idInStage": 0,
                      "stageId": 0,
                    },
                    "resultIndex": 0,
                    "type": "lookup",
                  },
                ],
                "lookup": 1,
                "type": "parameter",
              },
            ],
            [
              {
                "instantiation": [
                  {
                    "lookup": {
                      "idInStage": 0,
                      "stageId": 1,
                    },
                    "resultIndex": 0,
                    "type": "lookup",
                  },
                ],
                "lookup": 2,
                "type": "parameter",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 2,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > json-each of cte 1`] = `
{
  "buckets": [
    {
      "hash": 156964455,
      "sources": [
        0,
      ],
      "uniqueName": "manually_converted|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
        {
          "alias": "id",
          "expr": {
            "source": {
              "column": "_id",
            },
            "type": "data",
          },
        },
        {
          "alias": "createdOnSortable",
          "expr": {
            "function": "unixepoch",
            "parameters": [
              {
                "source": {
                  "column": "createdOn",
                },
                "type": "data",
              },
            ],
            "type": "function",
          },
        },
        {
          "alias": "archived",
          "expr": {
            "function": "ifnull",
            "parameters": [
              {
                "source": {
                  "column": "archived",
                },
                "type": "data",
              },
              {
                "base10": "0",
                "type": "lit_int",
              },
            ],
            "type": "function",
          },
        },
      ],
      "filters": [],
      "hash": 452187534,
      "outputTableName": "Scene",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "project",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "Scene",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [
    {
      "filters": [
        {
          "left": {
            "operand": {
              "left": {
                "source": {
                  "column": "appliedTo",
                },
                "type": "data",
              },
              "operator": "=",
              "right": {
                "type": "lit_string",
                "value": "",
              },
              "type": "binary",
            },
            "operator": "not",
            "type": "unary",
          },
          "operator": "and",
          "right": {
            "left": {
              "source": {
                "column": "status",
              },
              "type": "data",
            },
            "operator": "=",
            "right": {
              "type": "lit_string",
              "value": "CLAIMED",
            },
            "type": "binary",
          },
          "type": "binary",
        },
      ],
      "hash": 98845667,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "0",
      },
      "output": [
        {
          "source": {
            "function": 1,
            "outputName": "value",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "function": 0,
              "outputName": "value",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "ProjectInvitation",
      },
      "tableValuedFunctions": [
        {
          "functionInputs": [
            {
              "source": {
                "column": "appliedTo",
              },
              "type": "data",
            },
          ],
          "functionName": "json_each",
        },
        {
          "functionInputs": [
            {
              "source": {
                "column": "project",
              },
              "type": "data",
            },
          ],
          "functionName": "json_each",
        },
      ],
    },
  ],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "instantiation": [
                  {
                    "expr": {
                      "function": "->>",
                      "parameters": [
                        {
                          "source": {
                            "request": "auth",
                          },
                          "type": "data",
                        },
                        {
                          "type": "lit_string",
                          "value": "haystack_id",
                        },
                      ],
                      "type": "function",
                    },
                    "type": "request",
                  },
                ],
                "lookup": 0,
                "type": "parameter",
              },
              {
                "filters": [
                  {
                    "left": {
                      "type": "lit_string",
                      "value": "Scene",
                    },
                    "operator": "=",
                    "right": {
                      "source": {
                        "column": "value",
                      },
                      "type": "data",
                    },
                    "type": "binary",
                  },
                ],
                "functionInputs": [
                  {
                    "function": "->>",
                    "parameters": [
                      {
                        "source": {
                          "request": "connection",
                        },
                        "type": "data",
                      },
                      {
                        "type": "lit_string",
                        "value": "synced_objects",
                      },
                    ],
                    "type": "function",
                  },
                ],
                "functionName": "json_each",
                "outputs": [],
                "type": "table_valued",
              },
            ],
          ],
          "requestFilters": [
            {
              "left": {
                "operand": {
                  "left": {
                    "function": "->>",
                    "parameters": [
                      {
                        "source": {
                          "request": "connection",
                        },
                        "type": "data",
                      },
                      {
                        "type": "lit_string",
                        "value": "use_streams",
                      },
                    ],
                    "type": "function",
                  },
                  "operator": "=",
                  "right": {
                    "base10": "1",
                    "type": "lit_int",
                  },
                  "type": "binary",
                },
                "operator": "not",
                "type": "unary",
              },
              "operator": "and",
              "right": {
                "operand": {
                  "left": {
                    "function": "->>",
                    "parameters": [
                      {
                        "source": {
                          "request": "connection",
                        },
                        "type": "data",
                      },
                      {
                        "type": "lit_string",
                        "value": "use_streams",
                      },
                    ],
                    "type": "function",
                  },
                  "operator": "=",
                  "right": {
                    "type": "lit_string",
                    "value": "1",
                  },
                  "type": "binary",
                },
                "operator": "not",
                "type": "unary",
              },
              "type": "binary",
            },
          ],
          "sourceInstantiation": [
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 0,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "manually_converted",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > not in array 1`] = `
{
  "buckets": [
    {
      "hash": 207301670,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "operand": {
            "in": [
              {
                "type": "lit_string",
                "value": "public",
              },
              {
                "type": "lit_string",
                "value": "archived",
              },
            ],
            "target": {
              "source": {
                "column": "state",
              },
              "type": "data",
            },
            "type": "scalar_in",
          },
          "operator": "not",
          "type": "unary",
        },
      ],
      "hash": 159147029,
      "outputTableName": "notes",
      "partitionBy": [],
      "table": {
        "connection": null,
        "schema": null,
        "table": "notes",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [],
          "requestFilters": [],
          "sourceInstantiation": [],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > not in json array 1`] = `
{
  "buckets": [
    {
      "hash": 52312721,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "operand": {
            "function": "ps_json_contains",
            "parameters": [
              {
                "source": {
                  "column": "state",
                },
                "type": "data",
              },
              {
                "type": "lit_string",
                "value": "["public", "archived"]",
              },
            ],
            "type": "function",
          },
          "operator": "not",
          "type": "unary",
        },
      ],
      "hash": 133622965,
      "outputTableName": "notes",
      "partitionBy": [],
      "table": {
        "connection": null,
        "schema": null,
        "table": "notes",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [],
          "requestFilters": [],
          "sourceInstantiation": [],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > order-independent parameters 1`] = `
{
  "buckets": [
    {
      "hash": 13101728,
      "sources": [
        0,
        1,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 486948174,
      "outputTableName": "stores",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "region",
            },
            "type": "data",
          },
        },
        {
          "expr": {
            "source": {
              "column": "org",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "stores",
      },
      "tableValuedFunctions": [],
    },
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 516218655,
      "outputTableName": "products",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "region",
            },
            "type": "data",
          },
        },
        {
          "expr": {
            "source": {
              "column": "org",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "products",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "expr": {
                "function": "->>",
                "parameters": [
                  {
                    "source": {
                      "request": "subscription",
                    },
                    "type": "data",
                  },
                  {
                    "type": "lit_string",
                    "value": "region",
                  },
                ],
                "type": "function",
              },
              "type": "request",
            },
            {
              "expr": {
                "function": "->>",
                "parameters": [
                  {
                    "source": {
                      "request": "auth",
                    },
                    "type": "data",
                  },
                  {
                    "type": "lit_string",
                    "value": "org",
                  },
                ],
                "type": "function",
              },
              "type": "request",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > row metadata 1`] = `
{
  "buckets": [
    {
      "hash": 13444962,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
        {
          "alias": "suffix",
          "expr": {
            "source": {
              "metadata": "table_suffix",
            },
            "type": "data",
          },
        },
      ],
      "filters": [],
      "hash": 418226136,
      "outputTableName": "source",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "metadata": "schema",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": "default",
        "schema": "%",
        "table": "users_%",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "expr": {
                "function": "->>",
                "parameters": [
                  {
                    "source": {
                      "request": "auth",
                    },
                    "type": "data",
                  },
                  {
                    "type": "lit_string",
                    "value": "schema",
                  },
                ],
                "type": "function",
              },
              "type": "request",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 2,
}
`;

exports[`new sync stream features > table-valued functions > partition on data 1`] = `
{
  "buckets": [
    {
      "hash": 28022504,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 332279886,
      "outputTableName": "posts",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "function": 0,
              "outputName": "value",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "posts",
      },
      "tableValuedFunctions": [
        {
          "functionInputs": [
            {
              "source": {
                "column": "tags",
              },
              "type": "data",
            },
          ],
          "functionName": "json_each",
        },
      ],
    },
  ],
  "parameterIndexes": [],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "expr": {
                "function": "->>",
                "parameters": [
                  {
                    "source": {
                      "request": "subscription",
                    },
                    "type": "data",
                  },
                  {
                    "type": "lit_string",
                    "value": "tag",
                  },
                ],
                "type": "function",
              },
              "type": "request",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > table-valued functions > partition on parameter lookup 1`] = `
{
  "buckets": [
    {
      "hash": 457862451,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [],
      "hash": 102194264,
      "outputTableName": "users",
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "users",
      },
      "tableValuedFunctions": [],
    },
  ],
  "parameterIndexes": [
    {
      "filters": [],
      "hash": 368987341,
      "lookupScope": {
        "lookupName": "lookup",
        "queryId": "0",
      },
      "output": [
        {
          "source": {
            "function": 0,
            "outputName": "value",
          },
          "type": "data",
        },
      ],
      "partitionBy": [
        {
          "expr": {
            "source": {
              "column": "id",
            },
            "type": "data",
          },
        },
      ],
      "table": {
        "connection": null,
        "schema": null,
        "table": "orgs",
      },
      "tableValuedFunctions": [
        {
          "functionInputs": [
            {
              "source": {
                "column": "members",
              },
              "type": "data",
            },
          ],
          "functionName": "json_each",
        },
      ],
    },
  ],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [
            [
              {
                "instantiation": [
                  {
                    "expr": {
                      "function": "->>",
                      "parameters": [
                        {
                          "source": {
                            "request": "auth",
                          },
                          "type": "data",
                        },
                        {
                          "type": "lit_string",
                          "value": "org",
                        },
                      ],
                      "type": "function",
                    },
                    "type": "request",
                  },
                ],
                "lookup": 0,
                "type": "parameter",
              },
            ],
          ],
          "requestFilters": [],
          "sourceInstantiation": [
            {
              "lookup": {
                "idInStage": 0,
                "stageId": 0,
              },
              "resultIndex": 0,
              "type": "lookup",
            },
          ],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;

exports[`new sync stream features > table-valued functions > static filter 1`] = `
{
  "buckets": [
    {
      "hash": 378144963,
      "sources": [
        0,
      ],
      "uniqueName": "stream|0",
    },
  ],
  "dataSources": [
    {
      "columns": [
        "star",
      ],
      "filters": [
        {
          "left": {
            "type": "lit_string",
            "value": "important",
          },
          "operator": "=",
          "right": {
            "source": {
              "function": 0,
              "outputName": "value",
            },
            "type": "data",
          },
          "type": "binary",
        },
      ],
      "hash": 219838904,
      "outputTableName": "posts",
      "partitionBy": [],
      "table": {
        "connection": null,
        "schema": null,
        "table": "posts",
      },
      "tableValuedFunctions": [
        {
          "functionInputs": [
            {
              "source": {
                "column": "descriptions",
              },
              "type": "data",
            },
          ],
          "functionName": "json_each",
        },
      ],
    },
  ],
  "parameterIndexes": [],
  "streams": [
    {
      "queriers": [
        {
          "bucket": 0,
          "lookupStages": [],
          "requestFilters": [],
          "sourceInstantiation": [],
        },
      ],
      "stream": {
        "isSubscribedByDefault": true,
        "name": "stream",
        "priority": 3,
      },
    },
  ],
  "version": 1,
}
`;
